<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_inicio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02332A">

    <TextView
        android:id="@+id/txt_titulo_inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/titulo_inicio_app"
        android:textAlignment="center"
        android:textColor="#F8BA8C"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_nome_usuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hint_nome_usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#B3FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_inicio" />

    <Button
        android:id="@+id/btn_abrir_mapa"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:backgroundTint="#33691E"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_mapa_jogo"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_nome_usuario" />

    <Button
        android:id="@+id/btn_inventario"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#33691E"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_inventario"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_abrir_mapa" />

    <Button
        android:id="@+id/btn_gerenciar_jogos"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#4E3333"
        android:fontFamily="sans-serif-black"
        android:text="@string/btn_gerenciar_jogos"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_inventario" />

</androidx.constraintlayout.widget.ConstraintLayout>
